# blif2verilog

./: .gitignore  CMakeLists.txt  README.md  Type.hpp  blifDefinition.cpp  blifDefinition.hpp  codeGenerator.cpp  codeGenerator.hpp  example.blif  example2.blif  main.cpp  mappings.hpp  parser.cpp  parser.hpp  preprocess.hpp  tokenizer.cpp  tokenizer.hpp
blif/: example.blif  example3.blif  example4.blif
